--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
+    "ts-migrate": "^0.1.35",
     "typescript": "^5.3.3"
   },
   "private": true
